--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,29 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
 .app {
     text-align: center;
+    min-height: auto;
 }
+
 section {
     color: #fff;
     text-shadow: 3px 3px rgba(50,50, 70, 0.5) ;
-    background-color: rgb(10, 14, 11);
-    height: 100vh;
+    background-color: rgb(1, 10, 3);
+    min-height: auto;
+} 
+
+h1 {
+    text-shadow: 3px 3px rgba(50,50, 70, 0.5);
+    background-color: #00FF00;
+    text-align: center;
+    min-height: auto;
+}
+.imagen-inicio {
+    margin-top: 20px;
+    margin-left: 500px;
 }
